<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:textSize="@dimen/text_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/repo_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lang_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:alpha="0.5"
        android:text="@string/language"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lang_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/lang_header_text_view"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        tools:text="@string/language" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/update_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:alpha="0.5"
        android:text="@string/update_at"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_header_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/update_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/update_header_text_view"
        app:layout_constraintTop_toBottomOf="@+id/lang_text_view"
        tools:text="@string/update_at" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/stars_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:src="@drawable/ic_baseline_star_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_header_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stars_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/stars_image_view"
        app:layout_constraintTop_toBottomOf="@+id/update_text_view"
        tools:text="@string/stars" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/watchers_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stars_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/watchers_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/watchers_image_view"
        app:layout_constraintTop_toBottomOf="@+id/stars_text_view"
        tools:text="@string/watchers" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fork_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:src="@drawable/ic_baseline_fork_right_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchers_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fork_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/fork_image_view"
        app:layout_constraintTop_toBottomOf="@+id/watchers_text_view"
        tools:text="@string/forks" />

    <View
        android:id="@+id/separate_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_8"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fork_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separate_view"
        tools:text="@string/about" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_header_text_view"
        tools:text="@string/about" />

</androidx.constraintlayout.widget.ConstraintLayout>